--- a/package.json
+++ b/package.json
@@ -26,7 +26,9 @@
     "sass": "^1.32.8"
   },
   "dependencies": {
-    "handlebars": "^4.7.7",
-    "notiflix": "^3.2.2"
+    "axios": "^0.24.0",
+    "infinite-scroll": "^4.0.1",
+    "notiflix": "^3.2.2",
+    "simplelightbox": "^2.10.1"
   }
 }
